--- a/src/client/index.html
+++ b/src/client/index.html
@@ -9,10 +9,21 @@
     <h1>JATELE</h1>
     <textarea readonly></textarea>
     <input type="text" placeholder="Enter your message here..." />
+    <div id="debug">
+    </div>
   </body>
   <script>
-    const peer = new Peer();
-    peer.on("open", (id) => {
+    const textarea = document.querySelector("textarea");
+    const input = document.querySelector("input");
+    const debug = document.querySelector("#debug");
+
+    const peer = new Peer(null, {
+      host: "localhost",
+      port: 3000,
+      path: "/peer",
+      debug: 3,
+    });
+    peer.on("open", async (id) => {
       console.log("My peer ID is: " + id);
 
       fetch("http://localhost:3000/active", {
@@ -22,6 +33,66 @@
         method: "POST",
         body: JSON.stringify({ id }),
       });
+      
+      const d = await fetch("http://localhost:3000/", {
+        headers: {
+          "Content-Type": "application/json",
+        },
+      });
+
+      d.json().then((data) => {
+        data["clients"].forEach((id) => {
+          let connection = peer.connect(id);
+          console.log("Connecting to ", id);
+          connection.on("open", () => {
+            connection.send("hi!");
+            console.info("Connected to ", id)
+          });
+          connection.on("data", (data) => {
+            console.info("DATA!", data)
+            addToTextArea(data);
+          })
+          connection.on("error", (err) => {
+            console.error(err);
+            connection.close();
+          });
+          connection.on("close", () => {
+            connection.close();
+          });
+        });
+      });
+    });
+
+    setInterval(() => {
+      debug.innerHTML = "My ID" + peer.id + "<br>";
+      debug.innerHTML += peer.open ? "PeerJS open" : "PeerJS closed";
+      debug.innerHTML += "<br>Connections " + peer._connections.size;
+      debug.innerHTML += "<br>Event count " + peer._eventsCount;
+    }, 500);
+    
+
+    const addToTextArea = (text) => {
+      textarea.value += "\n" + text;
+      textarea.scrollTop = textarea.scrollHeight;
+    };
+
+    input.addEventListener("keyup", (e) => {
+      if (e.key === "Enter" && input.value.length > 0) {
+        addToTextArea(input.value)
+        input.value = "";
+      }
     });
   </script>
+  <style type="text/css">
+    body {
+      display: flex;
+      flex-direction: column;
+    }
+    textarea {
+      height: 40vh;
+    }
+    input {
+      padding: 5px;
+    }
+  </style>
 </html>
