preliminary raft logic

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -17,6 +17,65 @@
     const debug = document.querySelector("#debug");
     let clients = {};
 
+    const randomTimeout = () => Math.random() * 1000 + 3000;
+
+    let raft = {
+      log: [],
+    };
+
+    const raftElectionTimeout = () => {
+      console.log("Election timeout, promoting to candidate", raft);
+
+      raft.state = "candidate";
+      raft.term++;
+      raft.votedFor = peer.id;
+      raft.timeout = setTimeout(raftElectionTimeout, randomTimeout());
+      raftVoteReceived();
+
+      Object.entries(clients).forEach(([id, conn]) => {
+        conn.send({
+          type: "REQUEST_VOTE",
+          // TODO log index and term
+          term: raft.term,
+        });
+      });
+    };
+
+    const raftConvertToFollower = (term) => {
+      raft.state = "follower";
+      raft.term = term;
+      raft.votedFor = null;
+      raft.votesReceived = 0;
+      clearTimeout(raft.timeout);
+      raft.timeout = setTimeout(raftElectionTimeout, randomTimeout());
+    };
+
+    raftConvertToFollower(0);
+
+    const raftVoteReceived = () => {
+      raft.votesReceived++;
+      if (raft.votesReceived > Object.keys(clients).length / 2) {
+        console.log("Promoting to leader", raft);
+        raft.state = "leader";
+        raft.votesReceived = 0;
+        clearTimeout(raft.timeout);
+        // TODO send heartbeat
+      }
+    };
+
+    const raftSendAppendEntries = () => {
+      Object.entries(clients).forEach(([id, conn]) => {
+        conn.send({
+          type: "APPEND_ENTRIES",
+          // TODO log index and term
+          term: raft.term,
+          entries: [],
+        });
+      });
+    };
+
+    raft.timeout = setTimeout(raftElectionTimeout, randomTimeout());
+
     const keepActive = (id) => {
       fetch("http://localhost:3000/active", {
         method: "POST",
@@ -51,18 +110,66 @@
     };
 
     const initConnection = (conn) => {
-      conn.on("data", (data) => {
-        console.log("DATA: ", data);
-        addToTextArea(data);
+      conn.on("data", (message) => {
+        console.log(conn.peer, message);
+
+        if (message.type === "REQUEST_VOTE") {
+          // TODO, check log index and term
+          if (message.term < raft.term) {
+            conn.send({
+              type: "REQUEST_VOTE_RESPONSE",
+              term: raft.term,
+              voteGranted: false,
+            });
+          } else if (raft.votedFor === null || raft.votedFor === conn.id) {
+            console.log("Voting for", conn.id);
+            raft.votedFor = conn.id;
+            conn.send({
+              type: "REQUEST_VOTE_RESPONSE",
+              term: raft.term,
+              voteGranted: true,
+            });
+          } else {
+            conn.send({
+              type: "REQUEST_VOTE_RESPONSE",
+              term: raft.term,
+              voteGranted: false,
+            });
+          }
+        } else if (message.type === "REQUEST_VOTE_RESPONSE") {
+          if (message.term > raft.term) {
+            raftConvertToFollower(message.term);
+          } else if (message.voteGranted) {
+            raftVoteReceived();
+          }
+        } else if (message.type === "APPEND_ENTRIES") {
+          if (message.term < raft.term) {
+            conn.send({
+              type: "APPEND_ENTRIES_RESPONSE",
+              term: raft.term,
+              success: false,
+            });
+          } else if (raft.state === "candidate") {
+            raftConvertToFollower(message.term);
+          }
+          // TODO Reply false if log doesn’t contain an entry at prevLogIndex whose term matches prevLogTerm (§5.3)
+        } else if (message.type === "APPEND_ENTRIES_RESPONSE") {
+          // TODO
+        } else {
+          addToTextArea(conn.peer + ": " + message);
+        }
       });
 
       conn.on("error", (err) => {
-        console.error(err);
+        console.error(conn.peer, err);
         conn.close();
       });
 
       conn.on("close", () => {
+        console.info(conn.peer, "Connection closed");
         conn.close();
+
+        delete clients[conn.peer];
       });
     };
 
