--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <script src="https://unpkg.com/peerjs@1.5.1/dist/peerjs.min.js"></script>
+    <script type="module" src="raft.js"></script>
     <title>JATELE</title>
   </head>
   <body>
@@ -11,70 +12,13 @@
     <input type="text" placeholder="Enter your message here..." />
     <div id="debug"></div>
   </body>
-  <script>
+  <script type="module">
+    import { createRaft, handleRaftMessage } from "./raft.js";
+
     const textarea = document.querySelector("textarea");
     const input = document.querySelector("input");
     const debug = document.querySelector("#debug");
     let clients = {};
-
-    const randomTimeout = () => Math.random() * 1000 + 3000;
-
-    let raft = {
-      log: [],
-    };
-
-    const raftElectionTimeout = () => {
-      console.log("Election timeout, promoting to candidate", raft);
-
-      raft.state = "candidate";
-      raft.term++;
-      raft.votedFor = peer.id;
-      raft.timeout = setTimeout(raftElectionTimeout, randomTimeout());
-      raftVoteReceived();
-
-      Object.entries(clients).forEach(([id, conn]) => {
-        conn.send({
-          type: "REQUEST_VOTE",
-          // TODO log index and term
-          term: raft.term,
-        });
-      });
-    };
-
-    const raftConvertToFollower = (term) => {
-      raft.state = "follower";
-      raft.term = term;
-      raft.votedFor = null;
-      raft.votesReceived = 0;
-      clearTimeout(raft.timeout);
-      raft.timeout = setTimeout(raftElectionTimeout, randomTimeout());
-    };
-
-    raftConvertToFollower(0);
-
-    const raftVoteReceived = () => {
-      raft.votesReceived++;
-      if (raft.votesReceived > Object.keys(clients).length / 2) {
-        console.log("Promoting to leader", raft);
-        raft.state = "leader";
-        raft.votesReceived = 0;
-        clearTimeout(raft.timeout);
-        // TODO send heartbeat
-      }
-    };
-
-    const raftSendAppendEntries = () => {
-      Object.entries(clients).forEach(([id, conn]) => {
-        conn.send({
-          type: "APPEND_ENTRIES",
-          // TODO log index and term
-          term: raft.term,
-          entries: [],
-        });
-      });
-    };
-
-    raft.timeout = setTimeout(raftElectionTimeout, randomTimeout());
 
     const keepActive = (id) => {
       fetch("http://localhost:3000/active", {
@@ -113,50 +57,10 @@
       conn.on("data", (message) => {
         console.log(conn.peer, message);
 
-        if (message.type === "REQUEST_VOTE") {
-          // TODO, check log index and term
-          if (message.term < raft.term) {
-            conn.send({
-              type: "REQUEST_VOTE_RESPONSE",
-              term: raft.term,
-              voteGranted: false,
-            });
-          } else if (raft.votedFor === null || raft.votedFor === conn.id) {
-            console.log("Voting for", conn.id);
-            raft.votedFor = conn.id;
-            conn.send({
-              type: "REQUEST_VOTE_RESPONSE",
-              term: raft.term,
-              voteGranted: true,
-            });
-          } else {
-            conn.send({
-              type: "REQUEST_VOTE_RESPONSE",
-              term: raft.term,
-              voteGranted: false,
-            });
-          }
-        } else if (message.type === "REQUEST_VOTE_RESPONSE") {
-          if (message.term > raft.term) {
-            raftConvertToFollower(message.term);
-          } else if (message.voteGranted) {
-            raftVoteReceived();
-          }
-        } else if (message.type === "APPEND_ENTRIES") {
-          if (message.term < raft.term) {
-            conn.send({
-              type: "APPEND_ENTRIES_RESPONSE",
-              term: raft.term,
-              success: false,
-            });
-          } else if (raft.state === "candidate") {
-            raftConvertToFollower(message.term);
-          }
-          // TODO Reply false if log doesn’t contain an entry at prevLogIndex whose term matches prevLogTerm (§5.3)
-        } else if (message.type === "APPEND_ENTRIES_RESPONSE") {
-          // TODO
-        } else {
-          addToTextArea(conn.peer + ": " + message);
+        message.sender = conn.peer;
+
+        if (message.type.startsWith("RAFT_")) {
+          handleRaftMessage(raft, message);
         }
       });
 
@@ -193,6 +97,8 @@
       iceServers: [],
     });
 
+    let raft = createRaft(peer, () => clients);
+
     peer.on("open", async (id) => {
       console.log("My peer ID is: " + id);
 
@@ -214,6 +120,7 @@
       debug.innerHTML += peer.open ? "PeerJS open" : "PeerJS closed";
       debug.innerHTML += "<br>Connections " + peer._connections.size;
       debug.innerHTML += "<br>Event count " + peer._eventsCount;
+      debug.innerHTML += "<br>Raft state " + raft.state;
     }, 500);
 
     const addToTextArea = (text) => {
