--- a/src/client/index.html
+++ b/src/client/index.html
@@ -150,12 +150,12 @@
       clients[conn.peer] = conn;
 
       if (raft.state === "leader") {
-        // raft.log.push({
-        //   content: `User ${conn.peer} has joined the chat`,
-        //   senderId: peer.id,
-        //   timestamp: Date.now(),
-        //   type: "system",
-        // });
+        raft.log.push({
+          content: `User ${conn.peer} has joined the chat`,
+          senderId: peer.id,
+          timestamp: Date.now(),
+          type: "system",
+        });
         updateLogDisplay();
       }
 
