--- a/src/client/index.html
+++ b/src/client/index.html
@@ -9,7 +9,11 @@
   <body>
     <h1>JATELE</h1>
     <div id="chat"></div>
-    <input type="text" placeholder="Enter your message here..." />
+    <input
+      id="textField"
+      type="text"
+      placeholder="Enter your message here..."
+    />
     <div id="debug"></div>
   </body>
   <script type="module">
@@ -57,8 +61,6 @@
 
     const initConnection = (conn) => {
       conn.on("data", (message) => {
-        // console.log(conn.peer, message);
-
         if (message.type.startsWith("RAFT_")) {
           message.sender = clients[conn.peer];
           handleRaftMessage(raft, message);
@@ -152,8 +154,8 @@
       debug.innerHTML += "<br>Term " + raft.term;
       debug.innerHTML += "<br>Commit index " + raft.commitIndex;
 
-      const newMessages = raft.log.slice(chat.children.length + 1);
-      newMessages.forEach((entry) => {
+      chat.innerHTML = "";
+      raft.log.forEach((entry) => {
         if (entry.type === "RAFT_MESSAGE") {
           if (entry.sender === "SYSTEM") {
             chat.innerHTML += `<span class="system-message">${entry.text}</span>`;
@@ -164,7 +166,7 @@
           }
         }
       });
-    }, 250);
+    }, 100);
 
     const uuidToColour = (uuid) => {
       let hash = 0;
@@ -206,18 +208,33 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      background-color: #000000;
+      background-color: #1e1e1e;
       color: white;
+      font-family: Arial, sans-serif;
     }
     #chat {
       display: flex;
       flex-direction: column;
       align-items: flex-start;
       padding: 10px;
-      width: 70%;
+      width: 60%;
+    }
+    #textField {
+      background-color: #252526;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      padding: 10px;
+      font-size: 16px;
+      width: 60%;
+      margin-bottom: 10px;
+    }
+    ::placeholder {
+      color: white;
+      opacity: 1;
     }
     .system-message {
-      color: crimson;
+      color: #ed254e;
     }
     .sender {
       color: gray;
